# local-llm

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __main__.py  main.py
backend/local_llm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/mcp/: __init__.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
